# Timer

./: .gitignore  CMakeLists.txt  MyButton.qml  README.md  main.cpp  main.qml  qml.qrc  resources.qrc
headers/: logger.h  timer.h  timestamps_model.h
qml/: MyButton.qml  main.qml
src/: logger.cpp  main.cpp  timer.cpp  timer.h  timestamps_model.cpp
